src/query/parsers/4-query.js
/*
 * Copyright © 2025 Metreeca srl
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/

import * as peg$import0 from "./2-path.js";

function peg$subclass(child, parent) {
    function C() {
        this.constructor = child;
    }

    C.prototype = parent.prototype;
    child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
    var self = Error.call(this, message);
    // istanbul ignore next Check is a necessary evil to support older environments
    if (Object.setPrototypeOf) {
        Object.setPrototypeOf(self, peg$SyntaxError.prototype);
    }
    self.expected = expected;
    self.found = found;
    self.location = location;
    self.name = "SyntaxError";
    return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
    padString = padString || " ";
    if (str.length > targetLength) {
        return str;
    }
    targetLength -= str.length;
    padString += padString.repeat(targetLength);
    return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function (sources) {
    var str = "Error: " + this.message;
    if (this.location) {
        var src = null;
        var k;
        for (k = 0; k < sources.length; k++) {
            if (sources[k].source === this.location.source) {
                src = sources[k].text.split(/\r\n|\n|\r/g);
                break;
            }
        }
        var s = this.location.start;
        var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
            ? this.location.source.offset(s)
            : s;
        var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
        if (src) {
            var e = this.location.end;
            var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
            var line = src[s.line - 1];
            var last = s.line === e.line ? e.column : line.length + 1;
            var hatLen = (last - s.column) || 1;
            str += "\n --> " + loc + "\n"
                + filler + " |\n"
                + offset_s.line + " | " + line + "\n"
                + filler + " | " + peg$padEnd("", s.column - 1, ' ')
                + peg$padEnd("", hatLen, "^");
        } else {
            str += "\n at " + loc;
        }
    }
    return str;
};

peg$SyntaxError.buildMessage = function (expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
        literal: function (expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
        },

        class: function (expectation) {
            var escapedParts = expectation.parts.map(function (part) {
                return Array.isArray(part)
                    ? classEscape(part[0]) + "-" + classEscape(part[1])
                    : classEscape(part);
            });

            return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
        },

        any: function () {
            return "any character";
        },

        end: function () {
            return "end of input";
        },

        other: function (expectation) {
            return expectation.description;
        }
    };

    function hex(ch) {
        return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
        return s
            .replace(/\\/g, "\\\\")
            .replace(/"/g, "\\\"")
            .replace(/\0/g, "\\0")
            .replace(/\t/g, "\\t")
            .replace(/\n/g, "\\n")
            .replace(/\r/g, "\\r")
            .replace(/[\x00-\x0F]/g, function (ch) {
                return "\\x0" + hex(ch);
            })
            .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
                return "\\x" + hex(ch);
            });
    }

    function classEscape(s) {
        return s
            .replace(/\\/g, "\\\\")
            .replace(/\]/g, "\\]")
            .replace(/\^/g, "\\^")
            .replace(/-/g, "\\-")
            .replace(/\0/g, "\\0")
            .replace(/\t/g, "\\t")
            .replace(/\n/g, "\\n")
            .replace(/\r/g, "\\r")
            .replace(/[\x00-\x0F]/g, function (ch) {
                return "\\x0" + hex(ch);
            })
            .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
                return "\\x" + hex(ch);
            });
    }

    function describeExpectation(expectation) {
        return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
        var descriptions = expected.map(describeExpectation);
        var i, j;

        descriptions.sort();

        if (descriptions.length > 0) {
            for (i = 1, j = 1; i < descriptions.length; i++) {
                if (descriptions[i - 1] !== descriptions[i]) {
                    descriptions[j] = descriptions[i];
                    j++;
                }
            }
            descriptions.length = j;
        }

        switch (descriptions.length) {
            case 1:
                return descriptions[0];

            case 2:
                return descriptions[0] + " or " + descriptions[1];

            default:
                return descriptions.slice(0, -1).join(", ")
                    + ", or "
                    + descriptions[descriptions.length - 1];
        }
    }

    function describeFound(found) {
        return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
    options = options !== undefined ? options : {};

    var peg$FAILED = {};
    var peg$source = options.grammarSource;

    var peg$startRuleFunctions = {Query: peg$parseQuery};
    var peg$startRuleFunction = peg$parseQuery;

    var peg$c0 = "&";
    var peg$c1 = "@=";
    var peg$c2 = "#=";
    var peg$c3 = "^";
    var peg$c4 = "=";
    var peg$c5 = "~";
    var peg$c6 = "<=";
    var peg$c7 = ">=";

    var peg$r0 = /^[^&]/;

    var peg$e0 = peg$literalExpectation("&", false);
    var peg$e1 = peg$literalExpectation("@=", false);
    var peg$e2 = peg$literalExpectation("#=", false);
    var peg$e3 = peg$literalExpectation("^", false);
    var peg$e4 = peg$literalExpectation("=", false);
    var peg$e5 = peg$literalExpectation("~", false);
    var peg$e6 = peg$literalExpectation("<=", false);
    var peg$e7 = peg$literalExpectation(">=", false);
    var peg$e8 = peg$classExpectation(["&"], true, false);

    var peg$f0 = function (pairs) {
        return mergePairs(pairs);
    };
    var peg$f1 = function (first, rest) {
        return [first, ...rest].filter(p => p !== null);
    };
    var peg$f2 = function (value) {
        return ["@", parsePagination(value)];
    };
    var peg$f3 = function (value) {
        return ["#", parsePagination(value)];
    };
    var peg$f4 = function (expr, value) {
        return ["^" + expr, parseDirection(value)];
    };
    var peg$f5 = function (expr, value) {
        return ["~" + expr, parseValue(value)];
    };
    var peg$f6 = function (expr, value) {
        return ["<=" + expr, parseValue(value)];
    };
    var peg$f7 = function (expr, value) {
        return [">=" + expr, parseValue(value)];
    };
    var peg$f8 = function (expr, value) {
        return [expr, value === "*" ? "*" : parseValue(value)];
    };
    var peg$f9 = function (path) {
        return path.join(".");
    };
    var peg$currPos = options.peg$currPos | 0;
    var peg$savedPos = peg$currPos;
    var peg$posDetailsCache = [{line: 1, column: 1}];
    var peg$maxFailPos = peg$currPos;
    var peg$maxFailExpected = options.peg$maxFailExpected || [];
    var peg$silentFails = options.peg$silentFails | 0;

    var peg$result;

    if (options.startRule) {
        if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
        }

        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
        return input.substring(peg$savedPos, peg$currPos);
    }

    function offset() {
        return peg$savedPos;
    }

    function range() {
        return {
            source: peg$source,
            start: peg$savedPos,
            end: peg$currPos
        };
    }

    function location() {
        return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
        location = location !== undefined
            ? location
            : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildStructuredError(
            [peg$otherExpectation(description)],
            input.substring(peg$savedPos, peg$currPos),
            location
        );
    }

    function error(message, location) {
        location = location !== undefined
            ? location
            : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
        return {type: "literal", text: text, ignoreCase: ignoreCase};
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
        return {type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase};
    }

    function peg$anyExpectation() {
        return {type: "any"};
    }

    function peg$endExpectation() {
        return {type: "end"};
    }

    function peg$otherExpectation(description) {
        return {type: "other", description: description};
    }

    function peg$computePosDetails(pos) {
        var details = peg$posDetailsCache[pos];
        var p;

        if (details) {
            return details;
        } else {
            if (pos >= peg$posDetailsCache.length) {
                p = peg$posDetailsCache.length - 1;
            } else {
                p = pos;
                while (!peg$posDetailsCache[--p]) {
                }
            }

            details = peg$posDetailsCache[p];
            details = {
                line: details.line,
                column: details.column
            };

            while (p < pos) {
                if (input.charCodeAt(p) === 10) {
                    details.line++;
                    details.column = 1;
                } else {
                    details.column++;
                }

                p++;
            }

            peg$posDetailsCache[pos] = details;

            return details;
        }
    }

    function peg$computeLocation(startPos, endPos, offset) {
        var startPosDetails = peg$computePosDetails(startPos);
        var endPosDetails = peg$computePosDetails(endPos);

        var res = {
            source: peg$source,
            start: {
                offset: startPos,
                line: startPosDetails.line,
                column: startPosDetails.column
            },
            end: {
                offset: endPos,
                line: endPosDetails.line,
                column: endPosDetails.column
            }
        };
        if (offset && peg$source && (typeof peg$source.offset === "function")) {
            res.start = peg$source.offset(res.start);
            res.end = peg$source.offset(res.end);
        }
        return res;
    }

    function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) {
            return;
        }

        if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
        }

        peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
        return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
        return new peg$SyntaxError(
            peg$SyntaxError.buildMessage(expected, found),
            expected,
            found,
            location
        );
    }

    var peg$assign = Object.assign || function (t) {
        var i, s;
        for (i = 1; i < arguments.length; i++) {
            s = arguments[i];
            for (var p in s) {
                if (Object.prototype.hasOwnProperty.call(s, p)) {
                    t[p] = s[p];
                }
            }
        }
        return t;
    };

    function peg$callLibrary(lib, startRule) {
        const opts = peg$assign({}, options, {
            startRule: startRule,
            peg$currPos: peg$currPos,
            peg$silentFails: peg$silentFails,
            peg$library: true,
            peg$maxFailExpected: peg$maxFailExpected
        });
        const res = lib.parse(input, opts);
        peg$currPos = res.peg$currPos;
        peg$maxFailPos = res.peg$maxFailPos;
        peg$maxFailExpected = res.peg$maxFailExpected;
        return (res.peg$result === res.peg$FAILED) ? peg$FAILED : res.peg$result;
    }

    function peg$parseQuery() {
        var s0, s1;

        s0 = peg$currPos;
        s1 = peg$parsePairList();
        peg$savedPos = s0;
        s1 = peg$f0(s1);
        s0 = s1;

        return s0;
    }

    function peg$parsePairList() {
        var s0, s1, s2, s3, s4, s5;

        s0 = peg$currPos;
        s1 = peg$parsePair();
        if (s1 === peg$FAILED) {
            s1 = null;
        }
        s2 = [];
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 38) {
            s4 = peg$c0;
            peg$currPos++;
        } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e0);
            }
        }
        if (s4 !== peg$FAILED) {
            s5 = peg$parsePair();
            if (s5 === peg$FAILED) {
                s5 = null;
            }
            s3 = s5;
        } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 38) {
                s4 = peg$c0;
                peg$currPos++;
            } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$e0);
                }
            }
            if (s4 !== peg$FAILED) {
                s5 = peg$parsePair();
                if (s5 === peg$FAILED) {
                    s5 = null;
                }
                s3 = s5;
            } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
            }
        }
        peg$savedPos = s0;
        s0 = peg$f1(s1, s2);

        return s0;
    }

    function peg$parsePair() {
        var s0;

        s0 = peg$parseOffsetPair();
        if (s0 === peg$FAILED) {
            s0 = peg$parseLimitPair();
            if (s0 === peg$FAILED) {
                s0 = peg$parseSortPair();
                if (s0 === peg$FAILED) {
                    s0 = peg$parseLikePair();
                    if (s0 === peg$FAILED) {
                        s0 = peg$parseLtePair();
                        if (s0 === peg$FAILED) {
                            s0 = peg$parseGtePair();
                            if (s0 === peg$FAILED) {
                                s0 = peg$parseEqualityPair();
                            }
                        }
                    }
                }
            }
        }

        return s0;
    }

    function peg$parseOffsetPair() {
        var s0, s1, s2;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c1) {
            s1 = peg$c1;
            peg$currPos += 2;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e1);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseValue();
            peg$savedPos = s0;
            s0 = peg$f2(s2);
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseLimitPair() {
        var s0, s1, s2;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c2) {
            s1 = peg$c2;
            peg$currPos += 2;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e2);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseValue();
            peg$savedPos = s0;
            s0 = peg$f3(s2);
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseSortPair() {
        var s0, s1, s2, s3, s4;

        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 94) {
            s1 = peg$c3;
            peg$currPos++;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e3);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseQueryPath();
            if (s2 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 61) {
                    s3 = peg$c4;
                    peg$currPos++;
                } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$e4);
                    }
                }
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseValue();
                    peg$savedPos = s0;
                    s0 = peg$f4(s2, s4);
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseLikePair() {
        var s0, s1, s2, s3, s4;

        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 126) {
            s1 = peg$c5;
            peg$currPos++;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e5);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseQueryPath();
            if (s2 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 61) {
                    s3 = peg$c4;
                    peg$currPos++;
                } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$e4);
                    }
                }
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseValue();
                    peg$savedPos = s0;
                    s0 = peg$f5(s2, s4);
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseLtePair() {
        var s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parseQueryPath();
        if (s1 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c6) {
                s2 = peg$c6;
                peg$currPos += 2;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$e6);
                }
            }
            if (s2 !== peg$FAILED) {
                s3 = peg$parseValue();
                peg$savedPos = s0;
                s0 = peg$f6(s1, s3);
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseGtePair() {
        var s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parseQueryPath();
        if (s1 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c7) {
                s2 = peg$c7;
                peg$currPos += 2;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$e7);
                }
            }
            if (s2 !== peg$FAILED) {
                s3 = peg$parseValue();
                peg$savedPos = s0;
                s0 = peg$f7(s1, s3);
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseEqualityPair() {
        var s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parseQueryPath();
        if (s1 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
                s2 = peg$c4;
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$e4);
                }
            }
            if (s2 !== peg$FAILED) {
                s3 = peg$parseValue();
                peg$savedPos = s0;
                s0 = peg$f8(s1, s3);
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseQueryPath() {
        var s0, s1;

        s0 = peg$currPos;
        s1 = peg$parsePath();
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f9(s1);
        }
        s0 = s1;

        return s0;
    }

    function peg$parseValue() {
        var s0, s1, s2;

        s0 = peg$currPos;
        s1 = [];
        s2 = input.charAt(peg$currPos);
        if (peg$r0.test(s2)) {
            peg$currPos++;
        } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e8);
            }
        }
        while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = input.charAt(peg$currPos);
            if (peg$r0.test(s2)) {
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$e8);
                }
            }
        }
        s0 = input.substring(s0, peg$currPos);

        return s0;
    }

    function peg$parsePath() {
        var s0;

        s0 = peg$callLibrary(peg$import0, "Path");

        return s0;
    }


    function decodeURIComponentSafe(str) {
        try {
            return decodeURIComponent(str);
        } catch (e) {
            return str;
        }
    }

    function parseValue(str) {
        const decoded = decodeURIComponentSafe(str);
        if (decoded === "") {
            return null;
        } else if (decoded.startsWith("'") && decoded.endsWith("'")) {
            return decoded.slice(1, -1);
        } else if (/^-?(?:0|[1-9]\d*)(?:\.\d+)?(?:[eE][+-]?\d+)?$/.test(decoded)) {
            return Number(decoded);
        } else {
            return decoded;
        }
    }

    function parseDirection(value) {
        const lower = value.toLowerCase();
        if (lower === "increasing" || lower === "") {
            return 1;
        } else if (lower === "decreasing") {
            return -1;
        } else {
            const num = Number(value);
            if (!Number.isInteger(num)) {
                error("invalid sort order value");
            }
            return num;
        }
    }

    function parsePagination(value) {
        const num = Number(value);
        if (value === "") {
            error("empty pagination value");
        } else if (!Number.isInteger(num) || num < 0) {
            error("invalid pagination value");
        }
        return num;
    }

    function mergePairs(pairs) {
        const isOperator = ([key]) => /^[@#^~<>]/.test(key);

        const direct = Object.fromEntries(pairs.filter(isOperator));

        const grouped = pairs
            .filter(p => !isOperator(p))
            .reduce((acc, [key, value]) => ({
                ...acc,
                [key]: {
                    values: value === "*" ? (acc[key]?.values ?? []) : [...(acc[key]?.values ?? []), value],
                    hasWildcard: value === "*" || (acc[key]?.hasWildcard ?? false)
                }
            }), {});

        const equality = Object.fromEntries(
            Object.entries(grouped).map(([expr, {values, hasWildcard}]) => [
                "?" + expr,
                hasWildcard && values.length === 0 ? []
                    : values.length === 1 ? values[0]
                        : values
            ])
        );

        return {...direct, ...equality};
    }


    peg$result = peg$startRuleFunction();

    if (options.peg$library) {
        return /** @type {any} */ ({
            peg$result,
            peg$currPos,
            peg$FAILED,
            peg$maxFailExpected,
            peg$maxFailPos
        });
    }
    if (peg$result !== peg$FAILED && peg$currPos === input.length) {
        return peg$result;
    } else {
        if (peg$result !== peg$FAILED && peg$currPos < input.length) {
            peg$fail(peg$endExpectation());
        }

        throw peg$buildStructuredError(
            peg$maxFailExpected,
            peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
            peg$maxFailPos < input.length
                ? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
                : peg$computeLocation(peg$maxFailPos, peg$maxFailPos)
        );
    }
}

const peg$allowedStartRules = [
    "Query"
];

export {
    peg$allowedStartRules as StartRules,
    peg$SyntaxError as SyntaxError,
    peg$parse as parse
};
